--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -15,9 +15,7 @@
             <h:outputLabel for="password" value="Password:" />
             <p:password id="password" value="" required="true" label="password" />
 
-            <p:button outcome="Principal" value="Login">
-                <f:param name="username" value="username" />
-            </p:button>
+              <h:outputLabel for="password" value="Password:" />
         </h:form>
     </h:body>
 </html>
