--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -16,6 +16,8 @@
             <p:password id="password" value="" required="true" label="password" />
 
               <h:outputLabel for="password" value="Password:" />
+              
+                <h:outputLabel for="password" value="Password:" />
         </h:form>
     </h:body>
 </html>
